# binance

./: .gitignore  CLAUDE.md  COMPLETE_TRADING_SYSTEM_SUMMARY.md  PIPELINE_SUMMARY.md  QUICK_START_GUIDE.md  README_UV_SETUP.md  RL_SYSTEM_GUIDE.md  TBM_FEATURE_ENGINEERING_SUMMARY.md  main.py  pyproject.toml  run_advanced_trading_pipeline.py  setup_complete_pipeline.py  setup_env.sh  verify_environment.py
config/: __init__.py  config.json  settings.py
data_collection/: __init__.py  binance_api.py  data_fetcher.py  run_fetcher.py
data_processing/: DOLLAR_BAR_FEATURES_README.md  README.md  TBM_FEATURE_GUIDE.md  __init__.py  dataset_builder.py  dollar_bars.py  features.py  preprocessor.py  torch_dataset.py
data_processing/features/: __init__.py  advanced_features.py  dollar_bar_features.py  feature_builder.py  feature_utils.py  technical_indicators.py  triple_barrier_labeling.py
data_processing/scripts/: __init__.py  auto_pipeline.py  build_dollar_bar_features.py  build_tbm_features.py  full_dollar_bar_pipeline.py  generate_dollar_bars.py  incremental_update.py  reduce_features.py  stage1_collect_data.py  stage2_feature_engineering.py
database/: __init__.py  connection.py  mongodb_client.py
examples/: demo_tbm_meta_labeling.py
strategy/: __init__.py
strategy/analysis/: __init__.py  advanced_model_evaluation.py  alpha_analysis.py  backtest_analysis.py  result_logger.py
strategy/backtesting/: __init__.py  backtest_runner.py
strategy/reinforcement_learning/: __init__.py  actor_critic_agent.py  (+3 more)
utils/: __init__.py  common.py  logger.py  threshold_manager.py
(+10 files in other folders)
