[project]
name = "binance"
version = "0.1.0"
description = "Cryptocurrency Trading Strategy with Transformer Model and Smart Position Control"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.9,<3.14"
dependencies = [
    # 数据处理和科学计算
    "pandas>=2.0.0,<2.3.0",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.10.0,<1.15.0",
    # 机器学习和深度学习
    "scikit-learn>=1.3.0,<1.6.0",
    "lightgbm>=4.0.0",
    "torch>=2.0.0",
    "joblib>=1.3.0,<1.5.0",
    # 技术分析
    "ta-lib>=0.4.24",
    # 数据存储和IO
    "pyarrow>=15.0.0,<22.0.0",
    "pymongo>=4.0.0",
    # 统计和时间序列
    "statsmodels==0.14.2",
    "arch>=5.0.0",
    "pywavelets>=1.4.0",
    "filterpy>=1.4.0",
    # 可视化
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.0.0",
    "kaleido>=0.2.1",
    # 网络请求
    "requests>=2.31.0",
    "xgboost>=2.1.4",
    "numba>=0.60.0",
    "optuna>=4.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["strategy", "dataset", "market_api"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]
